--- a/css/demo.css
+++ b/css/demo.css
@@ -20,7 +20,7 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #F5B041;
+    color: #273746;
     background-color: black;
 }
 
@@ -189,6 +189,20 @@ h4{
 	content: '';
 	background-image: url('../img/fb.png');
 	background-size: 100% 100%;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
 @media screen and (max-width: 55em) {
